fix(backend): [KAN-36] fix SonarCloud Quality Gate issues and CI/CD secret injection